fix alignment for mobile view

--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -288,6 +288,10 @@ body{
 }
 
 .summary {
+  margin-bottom: 10px;
+}
+
+.summary div {
   margin-bottom: 0;
 }
 
